--- a/style.css
+++ b/style.css
@@ -17,7 +17,23 @@ input {
     height: 30px;
 }
 
+ul {
+    list-style: none;
+    margin: 10px 20px;
+}
+
+ul li {
+    color: white;
+}
+
+button {
+    height: 30px;
+    width: 60px;
+}
+
 main {
     height: calc(100vh - 100px);
     background-color: black;
+    display: flex;
+    flex-wrap: wrap;
 }
