--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ header {
     margin-right: 30px;
 }
 
+.logo:hover {
+    cursor: pointer;
+}
+
 .header-left ul {
     list-style: none;
 }
@@ -50,17 +54,67 @@ header {
     opacity: 70%;
 }
 
+.header-right {
+    display: flex;
+    width: 50%;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.header-right ul li {
+    font-size: 20px;
+    margin-right: 10px;
+    color: white;
+    display: inline;
+    margin-left: 20px;
+    transition: 0.3s;
+}
+
+.header-right ul li:hover {
+    cursor: pointer;
+}
+
+.header-right img {
+    height: 35px;
+    width: 35px;
+    margin-left: 20px;
+}
+
+.header-right img:hover {
+    cursor: pointer;
+}
+
+.input {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
 input {
-    height: 30px;
+    height: 35px;
+    width: 300px;
+    background-color: rgb(20, 20, 20);
+    color: white;
+    border: 1px solid white;
+    padding: 5px 5px 5px 40px;
+    border-radius: 0px;
+    display: none;
+}
+
+input:focus {
+    outline: none;
+}
+
+.search {
+    color: white;
+    position: absolute;
+    left: 8px;
+    font-size: 20px;
+    display: none;
 }
 
 .fa-star {
     color: #E8C848;
-}
-
-button {
-    height: 30px;
-    width: 60px;
 }
 
 main {
@@ -73,41 +127,56 @@ main {
     padding: 80px 20px 10px;
 }
 
-.container-element {
+.element {
+    position: relative;
     height: 250px;
     width: 175px;
+    margin: 5px 10px;
+}
+
+.container-element {
+    position: absolute;
+    transform-style: preserve-3d;
+    transition: all 0.5s ease;
+    height: 100%;
+    width: 100%;
+}
+
+.container-element:hover {
+    transform: rotateY(180deg);
+    cursor: pointer;
+}
+
+.front {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    transform: rotateY(180deg);
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    margin: 5px 10px;
-    position: relative;
-    padding: 20px;
-    transition: 0.3s;
+    padding: 5px;
 }
 
 .container-element span {
     overflow: hidden;
-}
-
-.container-element:hover {
-    cursor: pointer;
-    transform: scale(1.05);
-}
-
-.container-element:hover .poster {
-    display: none;
+    height: 60px;
+    font-size: 12px;
 }
 
 .poster {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;
 }
 
 span {
     color: white;
+    text-shadow: 1px 1px black;
 }
